--- a/index.html
+++ b/index.html
@@ -12,21 +12,35 @@
     <div class="main">
       <div class="copy-container">
         <h2>○○○○○○○○○○○○○○○
-            ○○○○○○○○○○○○○○○
-            ○○○○○○○○○○○○○○○
-            ○○○○○○○○○○○○○○○</h2>
+            ○○○○○○○○○○○○○○○<h2>
+
+            <h2>1.氏名</h2>　　
+            <h2>2.2年間で得たもの</h2>
+            <h2>3.1年後の目標</h2>
       </div>
       <div class="contents1">
         <div class="contents-item1">
           <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+          <h3>1.遠藤　充</h3>
+          <p>2.自分自身を変えるチャンスはいろいろな場面にあるので、</p>
+          <p>　チャンスをチャンスだと気づき、つかみ取っていくことの</p>
+          <p>　大切さ。</p>
+		  <p>3.個人で情報システム保守やコンサルの仕事を獲得して、</p>
+          <p>　目の前のお客様に直接貢献していく。</p>
         </div>
         <div class="contents-item1">
           <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
-        </div>
+          <h3>1.いびちゃん</h3>
+          <p>2.家族との関係が改善された。</p>
+          <p>　人間関係の問題解決を目指してかずたま公認鑑定士と</p>
+          <p>　して認定された。</p>
+          <p>　付き合う方ができた。</p>
+		  <p>　自分という軸はなんなのか再確認し、自信を持って生</p>
+          <p>　きられるようになった。自己決定力UP!</p>
+          <p>3.簿記3級の取得</p>
+       	  <p>　年間取得配当金額を12万にする(2021年度)</p>
+       	  <p>　→所有株資産を300万にする</p>
+		</div>
         <div class="contents-item1">
           <img src="P5プロフィール01.png">
           <p>○○○○○○○○○○○○○○○○○</p>
