--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <div class="main">
       <div class="copy-container">
         <h2>○○○○○○○○○○○○○○○
-            ○○○○○○○○○○○○○○○<h2>
-
-            <h2>1.氏名</h2>　　
+            ○○○○○○○○○○○○○○○<h2>　
+            <h2>1.氏名</h2>　
             <h2>2.2年間で得たもの</h2>
             <h2>3.1年後の目標</h2>
       </div>
@@ -22,9 +21,9 @@
         <div class="contents-item1">
           <img src="P5プロフィール01.png">
           <h3>1.遠藤　充</h3>
-          <p>2.自分自身を変えるチャンスはいろいろな場面にあるので、</p>
-          <p>　チャンスをチャンスだと気づき、つかみ取っていくことの</p>
-          <p>　大切さ。</p>
+          <p>2.自分自身を変えるチャンスはいろいろな場面にあるの</p>
+          <p>　で、チャンスをチャンスだと気づき、つかみ取ってい</p>
+          <p>　くことの大切さ。</p>
 		  <p>3.個人で情報システム保守やコンサルの仕事を獲得して、</p>
           <p>　目の前のお客様に直接貢献していく。</p>
         </div>
