--- a/index.html
+++ b/index.html
@@ -2,115 +2,70 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>卒業制作7月12日</title>
-    <link rel="stylesheet" href="卒業制作7月12日.css">
+    <title>Progate</title>
+    <link rel="stylesheet" href="プロゲート.css">
   </head>
   <body>
     <div class="header">
-     	<div class="header-title">卒　業　制　作</div>
+      <div class="header-logo">Progate</div>
+      <div class="header-list">
+        <ul>
+          <li>プログラミングとは</li>
+          <li>学べるレッスン</li>
+          <li>お問い合わせ</li>
+        </ul>
+      </div>
     </div>
     <div class="main">
       <div class="copy-container">
-        <h2>○○○○○○○○○○○○○○○
-            ○○○○○○○○○○○○○○○<h2>　
-            <h2>1.氏名</h2>　
-            <h2>2.2年間で得たもの</h2>
-            <h2>3.1年後の目標</h2>
+        <h1>HELLO WORLD<span>.</span></h1>
+        <h2>プログラミングの世界へようこそ</h2>
       </div>
-      <div class="contents1">
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <h3>1.遠藤　充</h3>
-          <p>2.自分自身を変えるチャンスはいろいろな場面にあるの</p>
-          <p>　で、チャンスをチャンスだと気づき、つかみ取ってい</p>
-          <p>　くことの大切さ。</p>
-		  <p>3.個人で情報システム保守やコンサルの仕事を獲得して、</p>
-          <p>　目の前のお客様に直接貢献していく。</p>
+      <div class="contents">
+        <div class="section-title">
+          <h3>学べるレッスン</h3>
         </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <h3>1.いびちゃん</h3>
-          <p>2.家族との関係が改善された。</p>
-          <p>　人間関係の問題解決を目指してかずたま公認鑑定士と</p>
-          <p>　して認定された。</p>
-          <p>　付き合う方ができた。</p>
-		  <p>　自分という軸はなんなのか再確認し、自信を持って生</p>
-          <p>　きられるようになった。自己決定力UP!</p>
-          <p>3.簿記3級の取得</p>
-       	  <p>　年間取得配当金額を12万にする(2021年度)</p>
-       	  <p>　→所有株資産を300万にする</p>
-		</div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+        <div class="contents-item">
+          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg">
+          <p>HTML & CSS</p>
         </div>
-        <div class="contents2">
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+        <div class="contents-item">
+          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/php.svg">
+          <p>PHP</p>
         </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+        <div class="contents-item">
+          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/ruby.svg">
+          <p>Ruby</p>
         </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+        <div class="contents-item">
+          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/swift.svg">
+          <p>Swilf</p>
         </div>
-        <div class="contents3">
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+      </div>
+      <div class="contact-form">
+        <div class="section-title2-1">
+          <h3>お問い合わせ</h3>
         </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+        <div class="section-title2-2">
+          <p>メールアドレス（必須）</p>
+          <input class="contact-submit-1">
+          <p>お問い合わせ内容（必須）</p>
+          <textarea></textarea>
+          <p>※必須項目は必ずご入力ください</p>
+          <input class="contact-submit-2" type="submit" value="送信">
         </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
-        </div>
-        <div class="contents4">
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
-        </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
-        </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
-        </div>
-        <div class="contents5">
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
-        </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
-        </div>
-       </div>
-     </div>
-    <div class="contact-form">
-       <h2>○○○○○○○○○○○○○○○
-            ○○○○○○○○○○○○○○○
-            ○○○○○○○○○○○○○○○
-            ○○○○○○○○○○○○○○○</h2>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="footer-logo">Progate</div>
+      <div class="footer-list">
+        <ul>
+          <li>会社概要</li>
+          <li>採用</li>
+          <li>お問い合わせ</li>
+        </ul>
+        
+      </div>
     </div>
   </body>
 </html>
