--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
- <body>
+ <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>卒業制作7月12日</title>
+    <link rel="stylesheet" href="卒業制作7月12日.css">
+  </head>
+  <body>
     <div class="header">
      	<div class="header-title">卒　業　制　作</div>
     </div>
