--- a/index.html
+++ b/index.html
@@ -1,1 +1,110 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>卒業制作7月12日</title>
+    <link rel="stylesheet" href="卒業制作7月12日.css">
+  </head>
+  <body>
+    <div class="header">
+     	<div class="header-title">卒　業　制　作</div>
+    </div>
+    <div class="main">
+      <div class="copy-container">
+        <h2>○○○○○○○○○○○○○○○
+            ○○○○○○○○○○○○○○○<h2>　
+            <h2>1.氏名</h2>　
+            <h2>2.2年間で得たもの</h2>
+            <h2>3.1年後の目標</h2>
+      </div>
+      <div class="contents1">
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <h3>1.遠藤　充</h3>
+          <p>2.自分自身を変えるチャンスはいろいろな場面にあるので、チャンスをチャンスだと気づき、つかみ取っていくことの大切さ。</p>
+		  <p>3.個人で情報システム保守やコンサルの仕事を獲得して、目の前のお客様に直接貢献していく。</p>
+        </div>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <h3>1.いびちゃん</h3>
+          <p>2.家族との関係が改善された。</p>
+          <p>人間関係の問題解決を目指してかずたま公認鑑定士として認定された。</p>
+          <p>付き合う方ができた。</p>
+		  <p>自分という軸はなんなのか再確認し、自信を持って生きられるようになった。</p>
+          <p>自己決定力UP!</p>
+          <p>3.簿記3級の取得</p>
+       	  <p>年間取得配当金額を12万にする(2021年度)</p>
+       	  <p>→所有株資産を300万にする</p>
+		</div>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents2">
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents3">
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents4">
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents5">
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+        <div class="contents-item1">
+          <img src="P5プロフィール01.png">
+          <p>○○○○○○○○○○○○○○○○○</p>
+          <p>○○○○○○○○○○○○○○○○○</p>
+        </div>
+       </div>
+     </div>
+    <div class="contact-form">
+       <h2>○○○○○○○○○○
+           ○○○○○○○○○○<h2>　
+    </div>
+  </body>
+</html>
