--- a/index.html
+++ b/index.html
@@ -28,18 +28,21 @@
           <img src="P5プロフィール01.png">
           <h3>1.いびちゃん</h3>
           <p>2.家族との関係が改善された。</p>
-          <p>人間関係の問題解決を目指してかずたま公認鑑定士として認定された。</p>
-          <p>付き合う方ができた。</p>
-		  <p>自分という軸はなんなのか再確認し、自信を持って生きられるようになった。</p>
-          <p>自己決定力UP!</p>
+           <p>・人間関係の問題解決を目指してかずたま公認鑑定士として認定された。</p>
+       	   <p>・付き合う方ができた。</p>
+       	   <p>・自分という軸はなんなのか再確認し、自信を持って生きられるようになった。</p>
+       	   <p>・自己決定力UP!</p>
           <p>3.簿記3級の取得</p>
-       	  <p>年間取得配当金額を12万にする(2021年度)</p>
+       	  <p>・年間取得配当金額を12万にする(2021年度)</p>
        	  <p>→所有株資産を300万にする</p>
 		</div>
         <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+          <img src="たっきー.gif">
+          <h3>1.たっきー</h3>
+          <p>2.人見知りをする事が多く、人との関わり方、接し方、話し方についていろいろ学ぶ事が出来ました。</p>
+		  <p>・先々の目標を設定する事が出来ました。</p>
+		  <p>・ホームページ制作の一通りの流れを学ぶ事ができ、簡単なものは作れるようになりました。</p>
+		  <p>3.今でも人見知りなところがあるのでもっと人との関わりを学び、堂々となれるようになり、もっとホームページ制作について学んで、収入を得られるようになりたい。</p>
         </div>
         <div class="contents2">
         <div class="contents-item1">
