--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     </div>
     <div class="main">
       <div class="copy-container">
-        <h2>○○○○○○○○○○○○○○○
-            ○○○○○○○○○○○○○○○<h2>　
-            <h2>1.氏名</h2>　
-            <h2>2.2年間で得たもの</h2>
-            <h2>3.1年後の目標</h2>
-      </div>
+        <h1>≪ガコプラ！卒業生紹介≫</h1>
+            <h2>ここでは2018年4月、5月、6月に入学して2年間学んできたガコプラ！</h2>
+			<h2>卒業生たちをご紹介します。</h2>
+			<h2>1.氏名　　2.二年間で得たもの　　3.一年後の目標</h2>　
       <div class="contents1">
         <div class="contents-item1">
           <img src="P5プロフィール01.png">
@@ -24,8 +22,8 @@
           <p>2.自分自身を変えるチャンスはいろいろな場面にあるので、チャンスをチャンスだと気づき、つかみ取っていくことの大切さ。</p>
 		  <p>3.個人で情報システム保守やコンサルの仕事を獲得して、目の前のお客様に直接貢献していく。</p>
         </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
+        <div class="contents-item2">
+          <img src="いびちゃん.gif">
           <h3>1.いびちゃん</h3>
           <p>2.家族との関係が改善された。</p>
            <p>・人間関係の問題解決を目指してかずたま公認鑑定士として認定された。</p>
@@ -36,7 +34,7 @@
        	  <p>・年間取得配当金額を12万にする(2021年度)</p>
        	  <p>→所有株資産を300万にする</p>
 		</div>
-        <div class="contents-item1">
+        <div class="contents-item3">
           <img src="たっきー.gif">
           <h3>1.たっきー</h3>
           <p>2.人見知りをする事が多く、人との関わり方、接し方、話し方についていろいろ学ぶ事が出来ました。</p>
@@ -47,8 +45,14 @@
         <div class="contents2">
         <div class="contents-item1">
           <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+          <h3>1.山田剛士 (たけし)</h3>
+          <p>2.・一緒にやる仲間や友達</p>
+		  <p>・やりたいこと。自分軸がわかるようになった</p>
+		  <p>・自分の可能性が広がり、未来にワクワクできるようになった</p>
+		  <p>・自信up</p>
+          <p>3.コーチング100人セッションやイベントを通して、自分らしく楽しく生きられる人を増やす。</p>
+          <p>・プログラミングでWEBサービスを作る。</p>
+
         </div>
         <div class="contents-item1">
           <img src="P5プロフィール01.png">
