--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
             <h2>ここでは2018年4月、5月、6月に入学して2年間学んできたガコプラ！</h2>
 			<h2>卒業生たちをご紹介します。</h2>
 			<h2>1.氏名　　2.二年間で得たもの　　3.一年後の目標</h2>　
+      		<h2>≪あとがき≫私たちは2年間学び、これから新たな目標に向けて旅立っていきます！</h2>
       <div class="contents1">
         <div class="contents-item1">
-          <img src="P5プロフィール01.png">
+          <img src="遠藤　充.gif">
           <h3>1.遠藤　充</h3>
           <p>2.自分自身を変えるチャンスはいろいろな場面にあるので、チャンスをチャンスだと気づき、つかみ取っていくことの大切さ。</p>
 		  <p>3.個人で情報システム保守やコンサルの仕事を獲得して、目の前のお客様に直接貢献していく。</p>
@@ -42,7 +43,6 @@
 		  <p>・ホームページ制作の一通りの流れを学ぶ事ができ、簡単なものは作れるようになりました。</p>
 		  <p>3.今でも人見知りなところがあるのでもっと人との関わりを学び、堂々となれるようになり、もっとホームページ制作について学んで、収入を得られるようになりたい。</p>
         </div>
-        <div class="contents2">
         <div class="contents-item1">
           <img src="P5プロフィール01.png">
           <h3>1.山田剛士 (たけし)</h3>
@@ -54,21 +54,27 @@
           <p>・プログラミングでWEBサービスを作る。</p>
 
         </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+        <div class="contents-item5">
+          <img src="鍛治秀.gif">
+          <h3>1.鍛治秀亮</h3>
+          <p>2.自分を見つめ直すきっかけが幾つもあり、自分の事をよく知れた、好きになれた。</p>
+		  <p>3.新しい仕事を１人で回せるようになる</p>
         </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+        <div class="contents-item6">
+          <img src="津田杏菜.gif">
+          <h3>1.津田杏菜</h3>
+          <p>2.2年間で得たもの→初対面の人とでも話せるようになりました。相手が話している最中に、無理に会話を続けようと必死に次の話題を考えていました。今は相手の話をじっくり聞いて、その上で質問や深掘りをしています。
+			2年前には思えなかった「話すことは楽しい」が今では心から思います。</p>
+		  <p>3.1年後の目標→LINEの友達を500人にする。（適当に交換して、数だけ増やすことはノーカウントとする。）</p>
         </div>
-        <div class="contents3">
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+        <div class="contents-item7">
+          <img src="英光(ひであき).gif">
+           <h3>1.英光(ひであき)</h3>
+          <p>2.・人との繋がりを意識して目標に向かっていく気持ち</p>
+		  <p>・自分の新たな可能性を見つけてそれが自信に繋がりやりたい事が沢山出来た。</p>
+		  <p>・諦めていた目標をもう一度掲げる事が出来ました</p>
+          <p>3.・これから子供達と接する仕事もするので100人の小学生または中学生の子達と対面する形で話をする事。</p>
+          <p>・子供達と携わる活動を継続している事</p>
         </div>
         <div class="contents-item1">
           <img src="P5プロフィール01.png">
