--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             <h2>ここでは2018年4月、5月、6月に入学して2年間学んできたガコプラ！</h2>
 			<h2>卒業生たちをご紹介します。</h2>
 			<h2>1.氏名　　2.二年間で得たもの　　3.一年後の目標</h2>　
-      		<h2>≪あとがき≫私たちは2年間学び、これから新たな目標に向けて旅立っていきます！</h2>
       <div class="contents1">
         <div class="contents-item1">
           <img src="遠藤充.gif">
@@ -47,9 +46,9 @@
           <img src="P5プロフィール01.png">
           <h3>1.山田剛士 (たけし)</h3>
           <p>2.・一緒にやる仲間や友達</p>
-		  <p>・やりたいこと。自分軸がわかるようになった</p>
-		  <p>・自分の可能性が広がり、未来にワクワクできるようになった</p>
-		  <p>・自信up</p>
+		      <p>・やりたいこと。自分軸がわかるようになった</p>
+		      <p>・自分の可能性が広がり、未来にワクワクできるようになった</p>
+		      <p>・自信up</p>
           <p>3.コーチング100人セッションやイベントを通して、自分らしく楽しく生きられる人を増やす。</p>
           <p>・プログラミングでWEBサービスを作る。</p>
 
@@ -63,28 +62,33 @@
         <div class="contents-item6">
           <img src="津田杏菜.gif">
           <h3>1.津田杏菜</h3>
-          <p>2.2年間で得たもの→初対面の人とでも話せるようになりました。相手が話している最中に、無理に会話を続けようと必死に次の話題を考えていました。今は相手の話をじっくり聞いて、その上で質問や深掘りをしています。
-			2年前には思えなかった「話すことは楽しい」が今では心から思います。</p>
-		  <p>3.1年後の目標→LINEの友達を500人にする。（適当に交換して、数だけ増やすことはノーカウントとする。）</p>
+          <p>2.2年間で得たもの→初対面の人とでも話せるようになりました。相手が話している最中に、無理に会話を続けようと必死に次の話題を考えていました。今は相手の話をじっくり聞いて、その上で質問や深掘りをしています。2年前には思えなかった「話すことは楽しい」が今では心から思います。</p>
+		      <p>3.1年後の目標→LINEの友達を500人にする。</p>
         </div>
         <div class="contents-item7">
           <img src="英光(ひであき).gif">
-           <h3>1.英光(ひであき)</h3>
+          <h3>1.英光(ひであき)</h3>
           <p>2.・人との繋がりを意識して目標に向かっていく気持ち</p>
-		  <p>・自分の新たな可能性を見つけてそれが自信に繋がりやりたい事が沢山出来た。</p>
-		  <p>・諦めていた目標をもう一度掲げる事が出来ました</p>
+		      <p>・自分の新たな可能性を見つけてそれが自信に繋がりやりたい事が沢山出来た。</p>
+		      <p>・諦めていた目標をもう一度掲げる事が出来ました</p>
           <p>3.・これから子供達と接する仕事もするので100人の小学生または中学生の子達と対面する形で話をする事。</p>
           <p>・子供達と携わる活動を継続している事</p>
         </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+        <div class="contents-item8">
+          <img src="ケイゴ.gif">
+          <h3>1.ケイゴ</h3>
+          <p>2.イベントや応援団体の運営イベントの集客や団体の日々の運営の基本は ガッコウCAMPのアシスタントでの成果思考や日常のあり方やスタッフ、参加者との関わり方を学びました。</p>
+          <p>3.団体として社会や地域に対してただの応援団体で終わるのでなく貢献をする</p>
+          <p> 名古屋だけでなく、東海3県の全体でイベントを1県につき1回開催し10人以上を動員する。</p>
+          <p> 他には 社会貢献を目的としたチャリティーやボランティア活動をし施設への寄付をする。</p>
+          <p> 寄付は 1万円を募金や会の活動を通して集める。</p>
+          <p> 全体の集まりにおいては 1年後には会の会員を現在158人のところを200人まで増やす。</p>
         </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+        <div class="contents-item9">
+          <img src="小勝悟.gif">
+          <h3>小勝　悟</h3> 
+          <p>2.初対面の人ともコミュニケーションを取れるようになった。自分に自信がついた。</p>
+          <p>3.配送の仕事を通して、お客様や上司と、コミュニケーションを取りながら仕事をして、職場の人から信頼されるような人になる。</p>
         </div>
         <div class="contents4">
         <div class="contents-item1">
@@ -116,8 +120,8 @@
        </div>
      </div>
     <div class="contact-form">
-       <h2>○○○○○○○○○○
-           ○○○○○○○○○○<h2>　
+      <h1>≪あとがき≫</h1>
+      <h2>私たちは2年間学び、これから新たな目標に向けて旅立っていきます！</h2>　
     </div>
   </body>
 </html>
