--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main">
       <div class="copy-container">
         <h1>≪ガコプラ！卒業生紹介≫</h1>
-            <h2>ここでは2018年4月、5月、6月に入学して2年間学んできたガコプラ！</h2>
+        <h2>ここでは2018年4月、5月、6月に入学して2年間学んできたガコプラ！</h2>
 			<h2>卒業生たちをご紹介します。</h2>
 			<h2>1.氏名　　2.二年間で得たもの　　3.一年後の目標</h2>　
       <div class="contents1">
@@ -20,7 +20,7 @@
           <img src="遠藤充.gif">
           <h3>1.遠藤　充</h3>
           <p>2.自分自身を変えるチャンスはいろいろな場面にあるので、チャンスをチャンスだと気づき、つかみ取っていくことの大切さ。</p>
-		  <p>3.個人で情報システム保守やコンサルの仕事を獲得して、目の前のお客様に直接貢献していく。</p>
+		      <p>3.個人で情報システム保守やコンサルの仕事を獲得して、目の前のお客様に直接貢献していく。</p>
         </div>
         <div class="contents-item2">
           <img src="いびちゃん.gif">
@@ -42,8 +42,8 @@
 		  <p>・ホームページ制作の一通りの流れを学ぶ事ができ、簡単なものは作れるようになりました。</p>
 		  <p>3.今でも人見知りなところがあるのでもっと人との関わりを学び、堂々となれるようになり、もっとホームページ制作について学んで、収入を得られるようになりたい。</p>
         </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
+        <div class="contents-item4">
+          <img src="たけし.gif">
           <h3>1.山田剛士 (たけし)</h3>
           <p>2.・一緒にやる仲間や友達</p>
 		      <p>・やりたいこと。自分軸がわかるようになった</p>
@@ -51,13 +51,12 @@
 		      <p>・自信up</p>
           <p>3.コーチング100人セッションやイベントを通して、自分らしく楽しく生きられる人を増やす。</p>
           <p>・プログラミングでWEBサービスを作る。</p>
-
-        </div>
+          </div>
         <div class="contents-item5">
           <img src="鍛治秀.gif">
           <h3>1.鍛治秀亮</h3>
           <p>2.自分を見つめ直すきっかけが幾つもあり、自分の事をよく知れた、好きになれた。</p>
-		  <p>3.新しい仕事を１人で回せるようになる</p>
+		      <p>3.新しい仕事を１人で回せるようになる</p>
         </div>
         <div class="contents-item6">
           <img src="津田杏菜.gif">
@@ -90,29 +89,13 @@
           <p>2.初対面の人ともコミュニケーションを取れるようになった。自分に自信がついた。</p>
           <p>3.配送の仕事を通して、お客様や上司と、コミュニケーションを取りながら仕事をして、職場の人から信頼されるような人になる。</p>
         </div>
-        <div class="contents4">
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+        <div class="contents-item10">
+          <img src="zaki.gif">
+          <h3>山崎隼哉</h3> 
+          <p>2.自分自身を見つめ直したことでやりたいことを明確にすることができた。初対面の人とでも自然に話せるようになった。</p>
+          <p>3.本業以外でも稼げる手段を見つける(月10万)</p>
         </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
-        </div>
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
-        </div>
-        <div class="contents5">
-        <div class="contents-item1">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
-        </div>
-        <div class="contents-item1">
+        <div class="contents-item11">
           <img src="P5プロフィール01.png">
           <p>○○○○○○○○○○○○○○○○○</p>
           <p>○○○○○○○○○○○○○○○○○</p>
