--- a/index.html
+++ b/index.html
@@ -85,20 +85,26 @@
         </div>
         <div class="contents-item9">
           <img src="小勝悟.gif">
-          <h3>小勝　悟</h3> 
+          <h3>1.小勝　悟</h3> 
           <p>2.初対面の人ともコミュニケーションを取れるようになった。自分に自信がついた。</p>
           <p>3.配送の仕事を通して、お客様や上司と、コミュニケーションを取りながら仕事をして、職場の人から信頼されるような人になる。</p>
         </div>
         <div class="contents-item10">
           <img src="zaki.gif">
-          <h3>山崎隼哉</h3> 
+          <h3>1.山崎隼哉</h3> 
           <p>2.自分自身を見つめ直したことでやりたいことを明確にすることができた。初対面の人とでも自然に話せるようになった。</p>
           <p>3.本業以外でも稼げる手段を見つける(月10万)</p>
         </div>
         <div class="contents-item11">
-          <img src="P5プロフィール01.png">
-          <p>○○○○○○○○○○○○○○○○○</p>
-          <p>○○○○○○○○○○○○○○○○○</p>
+          <img src="副田周希.gif">
+          <p>1.副田　周希</p>
+          <p>2.・コミュニケーション能力</p>
+          <p>　・本当にやりたいこと</p>
+          <p>　・理想の就職先に転職できた</p>
+          <p>　・物事を本質的に捉える思考力</p>
+          <p>　・学び続ける大切さ</p>
+          <p>　・仲間</p>
+          <p>3.障がい者福祉のコミュニティに参加新しく30人の福祉関係者のコミュニティをつくる</p>
         </div>
        </div>
      </div>
